<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_gravity="center_horizontal"
    android:gravity="center"
    android:fitsSystemWindows="true"
    android:layout_marginTop="16dp">

    <LinearLayout
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:gravity="center"
        android:orientation="vertical">
    <EditText
        android:id="@+id/username"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_vertical"
        android:hint="@string/user_name"
        android:text="@string/seidro"
        android:drawableLeft="@drawable/ic_action_person"
        android:drawablePadding="8dp"
        />
    <EditText
        android:id="@+id/password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_vertical"
        android:hint="@string/password"
        android:text="@string/seidro"
        android:inputType="textPassword"
        android:drawableLeft="@drawable/ic_action_accounts"
        android:drawablePadding="8dp"
        />
    <Button
        android:id="@+id/button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/log_in"
        android:drawableRight="@drawable/ic_action_accept"
        />


    <com.borjabravo.readmoretextview.ReadMoreTextView
        android:id="@+id/text3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/lorem_ipsum"
        android:layout_marginTop="@dimen/activity_vertical_margin"
        app:showTrimExpandedText="true"
        app:trimLength="80"
        app:trimMode="trimModeLine"
        app:trimLines="6"
        app:paddingStart="12dp"
        app:colorClickableText="@color/colorPrimary"
        />


    <ProgressBar
        android:id="@+id/progress"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:visibility="gone"
        />
    </LinearLayout>
</ScrollView>